build/log/idf_py_stderr_output_25013
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:96:2: error: unterminated argument list invoking macro 'ESP_LOGI'
   96 | }
      |  ^
/home/bmetal/esp-idf/uartTest/main/uartTest.c:85:25: error: 'ESP_LOGI' undeclared (first use in this function)
   85 |                         ESP_LOGI("Data","%x",readBuffer[i];
      |                         ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:85:25: note: each undeclared identifier is reported only once for each function it appears in
/home/bmetal/esp-idf/uartTest/main/uartTest.c:85:33: error: expected ';' at end of input
   85 |                         ESP_LOGI("Data","%x",readBuffer[i];
      |                                 ^
      |                                 ;
......
/home/bmetal/esp-idf/uartTest/main/uartTest.c:85:25: error: expected declaration or statement at end of input
   85 |                         ESP_LOGI("Data","%x",readBuffer[i];
      |                         ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:85:25: error: expected declaration or statement at end of input
/home/bmetal/esp-idf/uartTest/main/uartTest.c:85:25: error: expected declaration or statement at end of input
/home/bmetal/esp-idf/uartTest/main/uartTest.c: At top level:
/home/bmetal/esp-idf/uartTest/main/uartTest.c:33:13: warning: 'uart_rcv' defined but not used [-Wunused-function]
   33 | static void uart_rcv(){
      |             ^~~~~~~~
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
